--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello from Güray!</h1>
+    <h1>Hello from Ahmet!</h1>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
