--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hello from Güray!</h1>
     <h1>Hello from Ahmet!</h1>
+	<h1>Hello from Hasan!</h1>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
