added hello message

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <h1>Hello from Güray!</h1>
     <h1>Hello from Ahmet!</h1>
 	<h1>Hello from Hasan!</h1>
+	<h1>Hello from Alican!</h1>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
