Changed home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
   </head>
   <body>
-    <h1>Hello from Güray!</h1>
-    <h1>Hello from Ahmet!</h1>
-	<h1>Hello from Hasan!</h1>
-	<h1>Hello from Alican!</h1>
+    <h1> Table Tennis Home Page </h1>
+
+    <ul>
+    	<li><a href="/players"> Players </a> </li>
+    </ul>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
