added tournaments.html and tournaments.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
 
      <a href="/coaches"> Coaches </a>
      <a href="/players"> Players </a>
+     <a href="/tournaments"> Tournaments </a>
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
