added referees.html added referees.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,9 @@
     <h1> Table Tennis Home Page </h1>
 
 
-     <a href="/coaches"> Coaches </a>
-     <a href="/players"> Players </a>
+
+     <a href="/referees"> Referees </a>
+
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
