added players.html added players.py changed home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,12 @@
 
     <h1> Table Tennis Home Page </h1>
 
+	<ul>
+		<li><a href="/coaches"> Coaches </a></li>
+		<li><a href="/players"> Players </a></li>
+	</ul>
 
-     <a href="/coaches"> Coaches </a>
-     <a href="/players"> Players </a>
+
 
     <footer>
       <div id="datetime">{{ current_time }}</div>
