--- a/templates/players.html
+++ b/templates/players.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-  </head>
-  <body>
-  		<h2> Players List </h2>
-  </body>
+ <head>
+	<meta charset="utf-8" />
+	<title>players</title>
+	<link rel="stylesheet" href="/static/style.css" />
+</head>
+<body>
+<a href="/"> Home Page </a>
+	<h2>players</h2>
+	<form action="/players" method="POST">
+	<table>
+		<tr>
+			<th>#</th>
+			<th>Name</th>
+			<th>Gender</th>
+			<th>Nationality</th>
+			<th>Birth Date</th>
+			<th>Current Team</th>
+			<th>Times Won</th>
+		</tr>
+		{% for player in players %}
+		<tr>
+			<td><input type="checkbox" name="players_to_delete"value="{{player[0]}}" /></td>
+			<td> {{player[1]}} </td>
+			<td> {{player[2]}} </td>
+			<td> {{player[3]}} </td>
+			<td> {{player[4]}} </td>
+			<td> {{player[5]}} </td>
+			<td> {{player[6]}} </td>
+		</tr>
+		{% endfor %}
+	</table>
+		<input type="submit" name="delete"value="delete" />
+	<h3>Add New player</h3>
+
+		<table>
+			<tr>
+				<td>Name</td>
+				<td>Gender</td>
+				<td>Nationality</td>
+				<td>Birth Date</td>
+				<td>Current Team</td>
+				<td>Times Won</td>
+			</tr>
+			<tr>
+				<td> <input type="text" name="name" > </td>
+				<td> <input type="text" name="gender" > </td>
+				<td> <input type="text" name="nationality" > </td>
+				<td> <input type="text" name="birth_date" > </td>
+				<td> <input type="text" name="current_team" > </td>
+				<td> <input type="text" name="times_won" > </td>
+
+			</tr>
+		</table>
+		<input type="submit" name="add"value="add" />
+
+	</form>
+
+</body>
 </html>
