--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
 	 <li><a href="/coaches"> Coaches </a></li>
 	 <li><a href="/players"> Players </a></li>
 	 <li><a href="/tournaments"> Tournaments </a></li>
+	 <li><a href="/technicMembers"> Technic Members </a>
 	</ul>
 
 
