Modified update and delete settings in technic members files

--- a/templates/technicMembers.html
+++ b/templates/technicMembers.html
@@ -25,8 +25,8 @@
 	</table>
 	<table>
 		<tr>
-			<td> <input type="text" name="name" > </td>
-			<td> <input type="text" name="gender" > </td>
+			<td> <input type="text" name="nameToUpdate" > </td>
+			<td> <input type="text" name="genderToUpdate" > </td>
 		</tr>
 	</table>
 		<input type="submit" name="update" value="update" />
@@ -40,8 +40,8 @@
 				<td>Gender</td>
 			</tr>
 			<tr>
-				<td> <input type="text" name="name" > </td>
-				<td> <input type="text" name="gender" > </td>
+				<td> <input type="text" name="nameToAdd" > </td>
+				<td> <input type="text" name="genderToAdd" > </td>
 
 			</tr>
 		</table>
