added initialize database feature in server.py and commented out create table functions in other py's

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
     <h1> Table Tennis Home Page </h1>
 
 	<ul>
+	 <a href="/initializeDatabase"> Initialize Database </a>
 	 <li><a href="/referees"> Referees </a></li>
 	 <li><a href="/coaches"> Coaches </a></li>
 	 <li><a href="/players"> Players </a></li>
