added login page and user database, modified referencing lines in server.py and home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
 
 	<ul>
 	 <a href="/initializeDatabase"> Initialize Database </a>
+	 <br><a href="/login"> Login </a>
 	 <li><a href="/referees"> Referees </a></li>
 	 <li><a href="/coaches"> Coaches </a></li>
 	 <li><a href="/players"> Players </a></li>
