added matches table and page

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,7 @@
 	 <li><a href="/teams"> Teams </a></li>
 	 <li><a href="/tournaments"> Tournaments </a></li>
 	 <li><a href="/technicMembers"> Technic Members </a>
+	 <li><a href="/matches"> Matches </a></li>
 	</ul>
 
 
