--- a/templates/coaches.html
+++ b/templates/coaches.html
@@ -39,6 +39,8 @@
 			<th>Nationality</th>
 			<th>Birth Date</th>
 			<th>Current Team</th>
+			<th>Update Team</th>
+
 		</tr>
 		{% for coach in coaches %}
 		<tr>
@@ -47,13 +49,20 @@
 			<td> <input type="text" name="gender_update{{coach[0]}}" value="{{coach[2]}}"> </td>
 			<td> <input type="text" name="nationality_update{{coach[0]}}" value="{{coach[3]}}"> </td>
 			<td> <input type="text" name="birth_date_update{{coach[0]}}" value="{{coach[4]}}"> </td>
-			<td> <input type="text" name="current_team_update{{coach[0]}}" value="{{coach[5]}}"> </td>
+			<td> {{coach[5]}} </td>
+			<td><select name="current_team_update{{coach[0]}}">
+				{% for team in teams_select %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
+
+
 			<td><button type="submit" name="update" value="{{coach[0]}}" >Update</button></td>
 
 		</tr>
 		{% endfor %}
 	</table>
-		<input type="submit" name="delete"value="delete" />
+		<input type="submit" name="delete"value="Delete" />
 	<h3>Add New Coach</h3>
 
 		<table>
@@ -69,11 +78,14 @@
 				<td> <input type="text" name="gender" > </td>
 				<td> <input type="text" name="nationality" > </td>
 				<td> <input type="text" name="birth_date" > </td>
-				<td> <input type="text" name="current_team" > </td>
-
+				<td><select name="current_team">
+				{% for team in teams_select %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
 			</tr>
 		</table>
-		<input type="submit" name="add"value="add" />
+		<input type="submit" name="add"value="Add" />
 
 	</form>
 
