--- a/templates/technicMembers.html
+++ b/templates/technicMembers.html
@@ -36,16 +36,21 @@
 		</tr>
 		{% endfor %}
 	</table>
+		<input type="submit" name="delete" value="delete" />
+	<br/> </br>
 
-	<br/>
-
+	<table>
+		<tr>
+			<td>Name</td>
+			<td>Gender</td>
+		</tr>
 		<tr>
 			<td> <input type="text" name="nameToUpdate" > </td>
 			<td> <input type="text" name="genderToUpdate" > </td>
 		</tr>
-
+	</table>
 		<input type="submit" name="update" value="update" />
-		<input type="submit" name="delete" value="delete" />
+
 
 	<h2>Add New Technic Member</h2>
 
