--- a/templates/tournaments.html
+++ b/templates/tournaments.html
@@ -14,14 +14,12 @@
 			<th>Name</th>
 			<th>Year</th>
 			<th>Winner</th>
-			<th>Second Place</th>
 			<th>Best Player</th>
 		</tr>
 		<tr>
 			<td> <input type="text" name="nameFind" > </td>
 			<td> <input type="text" name="yearFind" > </td>
 			<td> <input type="text" name="winnerFind" > </td>
-			<td> <input type="text" name="second_placeFind" > </td>
 			<td> <input type="text" name="best_playerFind" > </td>
 
 		</tr>
@@ -35,8 +33,8 @@
 
 			<th>Name</th>
 			<th>Year</th>
-			<th>Winner</th>
-			<th>Second Place</th>
+			<th>Current Winner</th>
+			<th>New Winner</th>
 			<th>Current Best Player</th>
 			<th>New Best Player</th>
 		</tr>
@@ -45,9 +43,13 @@
 
 			<td> <input type="text" name="nameUpdate{{tournament[0]}}" value="{{tournament[1]}}"> </td>
 			<td> <input type="text" name="yearUpdate{{tournament[0]}}" value="{{tournament[2]}}"> </td>
-			<td> <input type="text" name="winnerUpdate{{tournament[0]}}" value="{{tournament[3]}}"> </td>
-			<td> <input type="text" name="second_placeUpdate{{tournament[0]}}" value="{{tournament[4]}}"> </td>
-			<td> {{tournament[5]}} </td>
+			<td> {{tournament[3]}} </td>
+			<td><select name="winnerUpdate{{tournament[0]}}">
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
+			<td> {{tournament[4]}} </td>
 			<td><select name="best_playerUpdate{{tournament[0]}}">
 				{% for player in PlayersSelect %}
   					<option value="{{player[0]}}">{{player[1]}}</option>
@@ -67,7 +69,6 @@
 			<th>Name</th>
 			<th>Year</th>
 			<th>Winner</th>
-			<th>Second Place</th>
 			<th>Best Player</th>
 		</tr>
 		{% for tournament in tournaments %}
@@ -77,7 +78,6 @@
 			<td> {{tournament[2]}} </td>
 			<td> {{tournament[3]}} </td>
 			<td> {{tournament[4]}} </td>
-			<td> {{tournament[5]}} </td>
 		</tr>
 		{% endfor %}
 	</table>
@@ -89,14 +89,16 @@
 				<td>Name</td>
 				<td>Year</td>
 				<td>Winner</td>
-				<td>Second Place</td>
 				<td>Best Player</td>
 			</tr>
 			<tr>
 				<td> <input type="text" name="name" > </td>
 				<td> <input type="text" name="year" > </td>
-				<td> <input type="text" name="winner" > </td>
-				<td> <input type="text" name="second_place" > </td>
+				<td> <select name="winner" >
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+  				</select> </td>
 				<td><select name="best_player">
 				{% for player in PlayersSelect %}
   					<option value="{{player[0]}}">{{player[1]}}</option>
