arranged teams table in necessary files

--- a/templates/teams.html
+++ b/templates/teams.html
@@ -2,57 +2,92 @@
 <html>
  <head>
 	<meta charset="utf-8" />
-	<title>Teams</title>
+	<title> Teams </title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 <a href="/"> Home Page </a>
-	<h2>Teams</h2>
-	<form action="/teams/" method="POST">
+	<h1> Teams </h1>
+	<form action="/teams" method="POST">
+	<h2> Find teams </h2>
+	<table>
+		<tr>
+			<td>Nation</td>
+			<td>Gender</td>
+			<td>Found Date</td>
+			<td>Times Won</td>
+		</tr>
+		<tr>
+			<td> <input type="text" name="nationToFind" ></td>
+			<td> <input type="text" name="genderToFind" ></td>
+			<td> <input type="text" name="foundDateToFind" ></td>
+			<td> <input type="text" name="timesWonToFind" ></td>
+			<td> <input type="submit" name="find" value="find"/> </td>
+		</tr>
+
+	</table>
+
+	<br/>
+
+	<h2>Teams Table</h2>
 	<table>
 		<tr>
 			<th>#</th>
 			<th>Nation</th>
 			<th>Gender</th>
-			<th>Foundation Date</th>
-			<th>Player 1 Name</th>
-			<th>Player 2 Name</th>
+			<th>Found Date</th>
 			<th>Times Won</th>
 		</tr>
 		{% for team in teams %}
 		<tr>
-			<td><input type="checkbox" name="teams_to_delete"value="{{team[0]}}" /></td>
+			<td><input type="checkbox" name="teams" value="{{team[0]}}" /></td>
 			<td> {{team[1]}} </td>
 			<td> {{team[2]}} </td>
 			<td> {{team[3]}} </td>
 			<td> {{team[4]}} </td>
-			<td> {{team[5]}} </td>
-			<td> {{team[6]}} </td>
 		</tr>
 		{% endfor %}
 	</table>
-		<input type="submit" name="delete" value="delete" />
-		
-	<h3>Add New Team</h3>
+		<input type="submit" name="delete" value="click to delete selected teams" />
+	<br/>
+
+	<h2>Update Selected Team</h2>
 	<table>
 		<tr>
 			<td>Nation</td>
 			<td>Gender</td>
-			<td>Foundation Date</td>
-			<td>Player 1 Name</td>
-			<td>Player 2 Name</td>
+			<td>Found Date</td>
 			<td>Times Won</td>
 		</tr>
 		<tr>
-			<td> <input type="text" name="nation" > </td>
-			<td> <input type="text" name="gender" > </td>
-			<td> <input type="text" name="found_date" > </td>
-			<td> <input type="text" name="player1_name" > </td>
-			<td> <input type="text" name="player2_name" > </td>
-			<td> <input type="text" name="times_won" > </td>
+			<td> <input type="text" name="nationToUpdate" > </td>
+			<td> <input type="text" name="genderToUpdate" > </td>
+			<td> <input type="text" name="foundDateToUpdate" > </td>
+			<td> <input type="text" name="timesWonToUpdate" > </td>
 		</tr>
 	</table>
+		<input type="submit" name="update" value="update" />
+
+
+	<h2>Add New Team</h2>
+
+		<table>
+			<tr>
+				<td>Nation</td>
+				<td>Gender</td>
+				<td>Found Date</td>
+				<td>Times Won</td>
+			</tr>
+			<tr>
+				<td> <input type="text" name="nationToAdd" > </td>
+				<td> <input type="text" name="genderToAdd" > </td>
+				<td> <input type="text" name="foundDateToAdd" > </td>
+				<td> <input type="text" name="timesWonToAdd" > </td>
+			</tr>
+		</table>
 		<input type="submit" name="add" value="add" />
+
 	</form>
+
 </body>
 </html>
