--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,7 @@
 	 <li><a href="/technicMembers"> Technic Members </a>
 	 <li><a href="/matches"> Matches </a></li>
 	 <li><a href="/matchstatistics"> Match Statistics</a></li>
+	  <li><a href="/playerstatistics"> Player Statistics</a></li>
 	</ul>
 
 
