edited home.html file

--- a/templates/matchstatistics.html
+++ b/templates/matchstatistics.html
@@ -14,7 +14,7 @@
 		<tr>
 			<th>Home Team</th>
 			<th>Away Team</th>
-			<th>Match Date</th>
+			<th>Match Place</th>
 			<th>Score</th>
 			<th>Referee</th>
 		</tr>
@@ -35,28 +35,40 @@
 		<tr>
 			<th>Delete</th>
 			<th>Home Team</th>
+			<th>Current Home Team</th>
 			<th>Away Team</th>
+			<th>Current Away Team</th>
+			<th>Referee</th>
+			<th>Current Referee</th>
 			<th>Match Date</th>
 			<th>Score</th>
-			<th>Referee</th>
 
 		</tr>
 		{% for matchstatistic in matchstatistics %}
 		<tr>
 			<td><input type="checkbox" name="matchstatistics_to_delete"value="{{matchstatistic[0]}}" /></td>
-			<td> <input type="text" name="home_team_update{{matchstatistic[0]}}" value="{{matchstatistic[1]}}"> </td>
-			<td> <input type="text" name="away_team_update{{matchstatistic[0]}}" value="{{matchstatistic[2]}}"> </td>
-			<td> <input type="text" name="match_date_update{{matchstatistic[0]}}" value="{{matchstatistic[3]}}"> </td>
-			<td> <input type="text" name="score_update{{matchstatistic[0]}}" value="{{matchstatistic[4]}}"> </td>
-			<td><select name="referee_update{{matchstatistic[0]}}">
-				{% for referee in referees_select %}
-					{%if referee[1] == matchstatistic[5] %}
-						<option selected="selected" value="{{referee[0]}}">{{referee[1]}}</option>
-  					{%else%}
-  						<option value="{{referee[0]}}">{{referee[1]}}</option>
-  					{%endif%}
+			<td> {{matchstatistic[1]}} </td>
+			<td><select name="home_team_update{{matchstatistic[0]}}">
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
   				{% endfor %}
 					</select></td>
+					<td> {{matchstatistic[2]}} </td>
+			<td><select name="away_team_update{{matchstatistic[0]}}">
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
+			<td> {{matchstatistic[5]}} </td>
+			<td><select name="referee_update{{matchstatistic[0]}}">
+				{% for referee in referees_select %}
+  					<option value="{{referee[0]}}">{{referee[1]}}</option>
+  				{% endfor %}
+					</select></td>
+
+			<td> <input type="text" name="match_date_update{{matchstatistic[0]}}" value="{{matchstatistic[3]}}"> </td>
+			<td> <input type="text" name="score_update{{matchstatistic[0]}}" value="{{matchstatistic[4]}}"> </td>
+
 
 
 			<td><button type="submit" name="update" value="{{matchstatistic[0]}}" >Update</button></td>
@@ -75,8 +87,16 @@
 				<td>Referee</td>
 			</tr>
 			<tr>
-				<td> <input type="text" name="home_team" > </td>
-				<td> <input type="text" name="away_team" > </td>
+				<td><select name="home_team">
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
+				<td><select name="away_team">
+				{% for team in TeamsSelect %}
+  					<option value="{{team[0]}}">{{team[1]}}</option>
+  				{% endfor %}
+					</select></td>
 				<td> <input type="text" name="match_date" > </td>
 				<td> <input type="text" name="score" > </td>
 				<td><select name="referee">
