--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,7 @@
 	 <li><a href="/matches"> Matches </a></li>
 	 <li><a href="/matchstatistics"> Match Statistics</a></li>
 	  <li><a href="/playerstatistics"> Player Statistics</a></li>
+	  <li><a href="/stadiums"> Stadiums</a></li>
 	</ul>
 
 
