--- a/templates/coaches.html
+++ b/templates/coaches.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -92,3 +95,4 @@
 
 </body>
 </html>
+{% endblock %}
