--- a/templates/matches.html
+++ b/templates/matches.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -123,3 +126,4 @@
 
 </body>
 </html>
+{% endblock %}
