--- a/templates/matchstatistics.html
+++ b/templates/matchstatistics.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -112,3 +115,4 @@
 
 </body>
 </html>
+{% endblock %}
