--- a/templates/players.html
+++ b/templates/players.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -108,3 +111,4 @@
 
 </body>
 </html>
+{% endblock %}
