--- a/templates/playerstatistics.html
+++ b/templates/playerstatistics.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -93,3 +96,4 @@
 
 </body>
 </html>
+{% endblock %}
