--- a/templates/referees.html
+++ b/templates/referees.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -79,3 +82,4 @@
 
 </body>
 </html>
+{% endblock %}
