--- a/templates/teams.html
+++ b/templates/teams.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -91,3 +94,4 @@
 
 </body>
 </html>
+{% endblock %}
