--- a/templates/technicMembers.html
+++ b/templates/technicMembers.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -107,3 +110,5 @@
 
 </body>
 </html>
+
+{% endblock %}
