--- a/templates/tournaments.html
+++ b/templates/tournaments.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -113,3 +116,4 @@
 
 </body>
 </html>
+{% endblock %}
