--- a/templates/users.html
+++ b/templates/users.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html>
  <head>
@@ -60,3 +63,4 @@
 
 </body>
 </html>
+{% endblock %}
