--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,17 @@
 body {
-  background-color: white;
-  color: #6F6F6F;
+  background-color: #e6e6fa;
+  color: #000000;
   font-family: 'Droid Sans', 'Helvetica', 'sans';
   font-size: 12pt;
   margin: 2ex 2em;
 }
 
 h1, h2, h3, h4 {
-  color: #E9601A;
+  color: #6d426d;
 }
 
 a {
-  color: #6F6F6F;
-  text-decoration: underline;
+  color: #1a1a1a;
 }
 
 div#datetime {
@@ -21,5 +20,5 @@ div#datetime {
 }
 
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid #e6e6fa;
 }
