fixed little error in technic members table

--- a/templates/technicMembers.html
+++ b/templates/technicMembers.html
@@ -19,7 +19,7 @@
 			<td>Gender</td>
 			<td>Nation</td>
 			<td>Birth Date</td>
-			<td>Team</td>
+			<td>Coach</td>
 		</tr>
 		<tr>
 			<td> <input type="text" name="nameToFind" ></td>
