Finished necessary works of developer guide section of documentation

--- a/templates/technicMembers.html
+++ b/templates/technicMembers.html
@@ -59,6 +59,7 @@
 		<input type="submit" name="delete" value="delete" />
 	<br/> </br>
 
+	<h2>Update Selected Technic Member</h2>
 	<table>
 		<tr>
 			<td>Name</td>
